# examples

./: .gitignore  LICENSE  README.md  pyqt-packages  readme.md  readme.rst  zcleanup
Architecture/: SSE.cpp  SSE2.cpp
C++/: Accumulate.cpp  AnyValue.cpp  AnyValue3.cpp  ArraySize.cpp  BimapExample.cpp  BimapExample2.cpp  CheckPermutation.cpp  CompileTimeObfuscatedString.cpp  CopyOnWrite.cpp  CopySwapIdiom.cpp  CreateRandomNumber.cpp  CustomAllocator.cpp  CustomOperatorNewDelete2.cpp  CustomOperatorNewDelete3.cpp  EnableMemberFunctionSFINAE.cpp  ExpandTupleToFunction.cpp  ExpressionTemplate.cpp  ExpressionTemplate2.cpp  FormatTime.cpp  GenerateUUID.cpp  GetEnvVariable.cpp  GetOverloadFunctionAddress.cpp  GetWeakerIteratorCategory.cpp  HeapStackOnlyObject.cpp  IOManipulator.cpp  InitializerListConstructor.cpp  LibstdcxxDebug.cpp  MandelbrotSet.cpp  MultiIndexExample2.cpp  MultiMapExample.cpp  NamespaceAlias.cpp  OverloadByMemberFunction.cpp  OverloadTemplateAndEnum.cpp  PackagedTask.cpp  ParseComplexNumber.cpp  ParseEmailAddress.cpp  ParseJson.cpp  PolymorphicWithoutInheritance.cpp  PrintTuple.cpp  PrintType.cpp  (+12 more)
Linux/: Backtrace.cpp  DaemonizeProcess.cpp  EpollServerExample.cpp  EpollServerThread.cpp  FunctionCallTrace.cpp  GetRandomBytes.cpp  GlobPatternExample.cpp  LibSSH2Example.cpp  ListRunningProcesses.cpp  PipeExample.cpp  SocketPairExample.cpp  WaitForChildProcess.cpp  WordExpandExample.cpp
Others/: 15Puzzle.cpp  BinPacking.cpp  BlurringImage.cpp  CalculatePermutationParity.cpp  ColorMandelbrotSet.cpp  CompressBase64.cpp  ContainerPickerIterator.cpp  DoxygenExample.cpp  ExpressionParser.cpp  ExpressionParser2.cpp  GenericBacktrack.cpp  HexFormatter.cpp  HexTableFormatter.cpp  JsonCppExample.cpp  LevenshteinDistance.cpp  LibClangExample.cpp  LibpngExample.cpp  Libxml2Example.cpp  MergeSort.cpp  OpenSSLHashExample.cpp  Parser.cpp  SudokuSolver.cpp  TypeList.cpp  WordCorrection.cpp  WordsConcatenation.cpp  XmlParserWithExpat.cpp  ZlibExample.cpp
Others/CMake2/: CMakeLists.txt  Makefile
Others/CMake2/cmake/: LibVersion.cmake
Others/CMake2/lib/: CMakeLists.txt  LibVersion.cmake
Others/CMake2/lib/example/: CMakeLists.txt
Others/CMake2/tools/exapp/: CMakeLists.txt
Python/: HttpHere.py  Plot.py  Plot2.py  SendRawSocket.py
Windows/: Accelerator.cpp  Accelerator2.cpp  COMSkeleton.cpp  CheckFileExists2.cpp  CheckWindowsVersion.cpp  ConsoleColoredOutput.cpp  ExtendFrameToClientArea.cpp  FileOpenDialog.cpp  FormatLastError.cpp  GetCacheInfo.cpp  GetCurrentWindowsName.cpp  GetDesktopWallpaper.cpp  GetScreenSize.cpp  GetSetDesktopWallpaper.cpp  GetUnicodeStringLength.cpp  GetUserCredentials2.cpp  GetUserProfileFolderPath.cpp  Hotkey.cpp  MinHook2.cpp  RunAsAdmin.cpp  SetElevationShieldIcon.cpp  SingleInstanceApplication.cpp  SingleInstanceApplication2.cpp  SubclassEditbox.cpp  TakeScreenShot.cpp  TakeScreenShot2.cpp  TransparentWindow.cpp  UnlockBitlocker.cpp  UseRawInput.cpp  UseShellObject.cpp  WalkProcess.cpp  WalkProcess2.cpp  WindowSkeleton.cpp
Windows/MiniMemoryScanner/: CMakeLists.txt  README.md
Windows/MiniMemoryScanner/output/: build.bat
Windows/MiniMemoryScanner/parser/: option_parser.cpp  pattern_parser.h
Windows/MiniMemoryScanner/process/memory/: const_range.h  scanner.h  utility.cpp
Windows/MiniMemoryScanner/utility/: arg_check.h  utility.h
algorithms/: paxos.rst  readme.md
bash-config/: readme.md
bbb-1-compile-and-flash-u-boot/: readme.md
bbb-2-compile-busybox/: readme.md
bbb-3-prepare-initramfs/: readme.md
bbb-4-compile-linux-kernel/: readme.md
bbb-build/: build.sh  init
bbb-build-manual/: readme.rst
bbb-compile-and-flash-u-boot/: readme.md
bbb-compile-busybox/: readme.md
bbb-dts/: am335x-boneblack.dts  readme.md
bbb-uEnv/: uEnv.txt
build-cross-gcc-with-glibc/: crossgcc.sh  readme.md
build-toybox/: build.sh
c++/: AnyValue2.cpp  ArraySize.cpp  CRTP2.cpp  CheckStringContainNumber.cpp  ColorMandelbrotSet.cpp  CombineImage.cpp  ConcatVector.cpp  CopySwapIdiom.cpp  CreateRandomNumber.cpp  DoxygenExample.cpp  EasyMemoryAlignment.cpp  ExpandTupleToFunction.cpp  GenerateRandomNumbers.cpp  IniParser.cpp  LevenshteinDistance.cpp  MandelbrotSet.cpp  MultiIndexExample.cpp  OverloadByBaseDerivedPointer.cpp  ProgramOptions.cpp  QuickSort.cpp  RangeBasedForLoop.cpp  ReferenceToArray.cpp  ReturnVoid.cpp  TagDispatching.cpp  TemplateDerivedFromAbstract.cpp  Threading.cpp  ThrowException.cpp  TriboolExample.cpp  WordCorrection.cpp
c++/cmake/: CMakeLists.txt
change-ubuntu-switcher-icon-size/: readme.md
clang-compile/: readme.md
cloud-init/: readme.rst
cntlm-proxy-config/: readme.md
concurrency/: readme.md
cpp/: Async.cpp  Async2.cpp  CRTP.cpp  CompressFile.cpp  ConstructorFunctionTryBlock.cpp  CopyVectorToStream.cpp  CustomOperatorNewDelete.cpp  DateTimeExample.cpp  ExpressionParser2.cpp  ExtendedIsSame.cpp  GTestExample.cpp  GcovExample.cpp  GetFunctionTemplateAddress.cpp  GetOverloadFunctionAddress.cpp  GetPermutation.cpp  GroupObjects.cpp  IteratorSkeleton.cpp  Libxml2Example.cpp  MultiIndexExample3.cpp  (+10 more)
cpp-all-headers/: headers.h  readme.md
cpp/cppcms/: CMakeLists.txt  Dockerfile  Makefile  run.sh
cpp/cppcms/config/: CMakeLists.txt  config.json
cpp/cppcms/include/templates/: content.h
cpp/cppcms/tools/: CMakeLists.txt  main.cpp
cpp/cppcms/web/templates/: CMakeLists.txt  intro.tmpl  master.tmpl  news.tmpl  page.tmpl
cpp/libedit-test/: CMakeLists.txt
cpp/libedit-test/examples/: CMakeLists.txt  Cli.cpp
cpp/libedit-test/include/clicxx/: Editline.h  Exception.h  Handler.h  StdEx.h  Utility.h
cpp/libedit-test/lib/: CMakeLists.txt  Check.h  Editline.cpp  Handler.cpp
cpp/variable-tracker/: CMakeLists.txt  Dockerfile  Makefile  main.cpp
others/postgresql/app/: CMakeLists.txt
rust/downloader/code/downloader/bin-url-grabber/: Cargo.toml
rust/downloader/code/downloader/bin-url-grabber/src/: config.rs  grabber.rs  main.rs
rust/downloader/code/downloader/libcommon/: Cargo.toml
rust/downloader/code/downloader/libcommon/src/: config.rs  http.rs  kafka.rs  lib.rs  log.rs  message.rs  redis.rs
(+1123 files in other folders)
