[package]
name = "libcommon"
version = "0.1.0"
authors = ["Thi Huynh <so61pi.re@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.5"
rdkafka = "0.18.0"
log = "0.4.6"
chrono = { version = "0.4.6", features = ["serde"] }
clap = "2.32.0"
serde = { version = "1.0.85", features = ["derive"] }
serde_json = "1.0.38"
futures = "0.1.25"
config = "0.9.2"
failure = "0.1.5"
postgres-derive = "0.3.3"
postgres = "0.15.2"
actix = "0.7.9"
simplelog = "0.5.3"
rand = "0.6.5"
redis = "0.10.0"
